archive/deploy/overlays/review/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        # Flux envsubst replaces variables found in `deploy-vars.env` or falls back to defaults
        #
        - ${INGRESS_SUBDOMAIN:=corgi}.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
  rules:
    # Inject host URL `review--...` or fall back to default
    #
    - host: ${INGRESS_SUBDOMAIN:=corgi}.ltc.bcit.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corgi-nginx-service
                port:
                  number: 80
